<resources>
    <string name="appName">4kidsSafety</string>
    <string name="appLogo">4kidsSafety</string>
    <string name="safety">safety</string>
    <string name="settingsTitle">Settings</string>
    <string name="soglashenie">Регистрируясь в приложении 4kids, Вы принимаете условия <a href="activityhref://sogActivity">Пользовательского соглашения</a> и <a href="activityhref://polActivity">Политики конфиденциальности</a>.</string>
    <string name="userPassword">Password</string>
    <string name="userConfirmPassword">Confirm password</string>
    <string name="loginSubmit">Sign in</string>
    <string name="serverConfigHost">DNS or IP:PORT</string>
    <string name="userName">Name</string>
    <string name="userEmail">Email</string>
    <string name="userPhone">Phone</string>
    <string name="registerSubmit">Sign up</string>
    <string name="logoutSubmit">Sign Out</string>
    <string name="mapTitle">Map</string>
    <string name="devicesTitle">Devices</string>
    <string name="sharedSave">Save</string>
    <string name="deviceTitle">Device</string>
    <string name="settingsAccount">Settings</string>
    <string name="deviceIdentifier">Identifier</string>
    <string name="deviceCategory">Category</string>
    <string name="deviceSim">Phone number</string>
    <string name="loginTitle">Login</string>
    <string name="registerTitle">Register</string>
    <string name="sharedEdit">Edit</string>
    <string name="sharedRemove">Remove</string>
    <string name="listTitle">List</string>
    <string name="devicePositionsTitle">Track</string>
    <string name="sharedShowOnMapTItle">Show on the map</string>
    <string name="positionValid">Valid</string>
    <string name="positionFixTime">Time</string>
    <string name="positionLatitude">Latitude</string>
    <string name="positionLongitude">Longitude</string>
    <string name="positionAltitude">Altitude</string>
    <string name="positionSpeed">Speed</string>
    <string name="positionCourse">Course</string>
    <string name="positionUnknown">Unknown</string>
    <string name="sharedLoading">Loading</string>
    <string name="sharedWait">Wait…</string>
    <string name="sharedRemoveConfirm">Remove item?</string>
    <string name="serverConfigsListTitle">Servers List</string>
    <string name="serverConfigTitle">Server</string>
    <string name="serverConfigUseNewProtocol">Use a new protocol</string>
    <string name="serverConfigProtocolType">Protocol type</string>
    <string name="serverConfigUseSecure">Use SSL/TLS</string>
    <string name="sharedRegistryNewAccount">User registration is completed successfully</string>
    <string name="sharedBackPressed">Press again to exit</string>
    <string name="errorCreateSession">Access is denied</string>
    <string name="errorCreateAccount">Failed to create user</string>
    <string name="errorGetServer">Failed to download information about the server</string>
    <string name="errorGetDevices">Failed to load the list of devices</string>
    <string name="errorGetSession">Failed to load the session data</string>
    <string name="errorUpdateAccount">Unable to update your user information</string>
    <string name="errorCreateDevice">Failed to create item</string>
    <string name="errorUpdateDevice">Failed to update item</string>
    <string name="errorGetPositions">Could not load messages specified interval</string>
    <string name="errorDeleteDevice">Unable to remove the item</string>
    <string name="errorInvalidEmail">This emailOrLogin address is invalid</string>
    <string name="errorInvalidPassword">This password is too short</string>
    <string name="errorIncorrectPassword">This password is incorrect</string>
    <string name="errorFieldRequired">This field is required</string>
    <string name="errorPermissionRationale">Contacts permissions are needed for providing emailOrLogin completions.</string>
    <string name="errorPermissionWriteStorage">Write sotrage permissions are needed for show map.</string>
    <string name="errorPermissionCoarseLocation">Coarse location permissions are needed for show your location.</string>
    <string name="sharedDateTimeFormat" translatable="false">dd/MM/yyyy HH:mm:ss</string>
    <string name="positionsTitle">Positions</string>
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="sharedSendCommand">Send command</string>
    <string name="commandFrequency">Frequency</string>
    <string name="commandUnit">Unit</string>
    <string name="commandTitle">Command</string>
    <string name="positionPeriodic">Periodic Reporting</string>
    <string name="positionStop">Stop Reporting</string>
    <string name="engineStop">Engine Stop</string>
    <string name="engineResume">Engine Resume</string>
    <string name="rebootDevice">Reboot Device</string>
    <string name="positionSingle">Position</string>
    <string name="modePowerSaving">Power OFF</string>
    <string name="voiceMonitoring">Voice Monitoring</string>
    <string name="deviceIdentification">Find Device</string>
    <string name="errorSendCommand">The command is not executed</string>
    <string name="sharedCommandResult">The command completed successfully</string>
    <string name="configServerDns">DNS or IP:PORT</string>
    <string name="configServerSecure" translatable="false">Used Tls or Ssl</string>
    <string name="userAdmin">Administrator</string>
    <string name="mapLayer">Map layer</string>
    <string name="settingsUsers">Users</string>
    <string name="settingsMenu">Settings</string>
    <string name="settingsServer">Server</string>
    <string name="serverRegistration">Registration</string>
    <string name="serverReadOnly">Readonly</string>
    <string name="mapBingMapKey">Bing Map Key</string>
    <string name="settingsDistanceUnit">Distance</string>
    <string name="settingsSpeedUnit">Speed</string>
    <string name="serverZoom">Zoom</string>
    <string name="settingsTwelveHourFormat">12-hour Format</string>
    <string name="mapOsm">Open Street Map</string>
    <string name="mapBingRoad">Bing Maps Road</string>
    <string name="mapBingAerial">Bing Maps Aerial</string>
    <string name="mapCustom">Custom Map</string>
    <string name="settingsDevices">Devices</string>
    <string name="aboutDescription">4kids is an Android  application. It can work with Traccar open source server software.</string>
    <string name="aboutLicense">This application is free and open source, source code is licensed under GNU General Public License, Version 3.0 and available on GitHub.</string>
    <string name="aboutWeb">For more information visit\nwww.4kidssafety.ru</string>
    <string name="aboutSoglashenie">License agreement</string>
    <string name="aboutPolitika">Privacy policy </string>
    <string name="userTitle">User</string>
    <string name="title_activity_settings">Settings</string>
    <string name="aboutTitle">About</string>
    <string name="settingsGeofences">Geofences</string>
</resources>