<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016, Sergey Penkovsky <sergey.penkovsky@gmail.com>
  ~
  ~ This file is part of Erlymon Monitor.
  ~
  ~ Erlymon Monitor is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Erlymon Monitor is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Erlymon Monitor.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.SignUpActivity"
    android:background="@drawable/main_green_gradient"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:focusableInTouchMode="false"
        android:isScrollContainer="false">



        <LinearLayout
            android:id="@+id/sign_up_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/singUpNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextHintSingUp">

                <EditText

                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userName"
                    android:textAllCaps="true"
                    android:inputType="text|textCapSentences"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/singUpPhonelLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/EditTextHintSingUp">

                <AutoCompleteTextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userPhone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/singUpEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextHintSingUp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userEmail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/singUpPassLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextHintSingUp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorWhite"
                >

                <android.support.design.widget.TextInputEditText
                    android:textColor="@color/colorWhite"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userPassword"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/loginSubmit"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Deprecated" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/singUpPassConfirmLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextHintSingUp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorWhite"
                android:visibility="invisible"
                >

                <android.support.design.widget.TextInputEditText
                    android:textColor="@color/colorWhite"
                    android:id="@+id/confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userConfirmPassword"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/loginSubmit"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Deprecated" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


    </ScrollView>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:gravity="bottom|center"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/politics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.12"
        android:autoLink="none"
        android:linksClickable="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/soglashenie"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textColorLink="@color/colorWhite" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="190dp"
            android:layout_height="33dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0.03"
            android:background="@drawable/sprite_0038_rect"
            android:text="Зарегистрироваться"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_weight="0.02"
        android:background="@color/colorWhite"
        android:text="НАЗАД"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold" />


</LinearLayout>

</RelativeLayout>
